--- a/manifest.json
+++ b/manifest.json
@@ -3,14 +3,11 @@
   "version": "0.1",
   "manifest_version": 2,
 
-  "description": "",
-  // "icons": {
-  //   "16": "icon16.png",
-  //   "32": "icon32.png",
-  //   "48": "icon48.png",
-  //   "128": "icon128.png",
-  //   "256": "icon256.png"
-  // },
+  "description": "Highlight selected word in GitHub source view like Sublime Text",
+  "icons": {
+    "48": "icon48.png",
+    "128": "icon128.png"
+  },
 
   "content_scripts": [ {
     "js": [ "src/jquery-2.1.1.min.js", "src/highlight-selected.js" ],
