--- a/Info.plist
+++ b/Info.plist
@@ -7,7 +7,7 @@
 	<key>Builder Version</key>
 	<string>9537.85.10.17.1</string>
 	<key>CFBundleDisplayName</key>
-	<string>github-highlight-selected</string>
+	<string>GitHub Highlight Selected</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.Nuclides.github-highlight-selected</string>
 	<key>CFBundleInfoDictionaryVersion</key>
