--- a/manifest.json
+++ b/manifest.json
@@ -10,8 +10,7 @@
   },
 
   "content_scripts": [ {
-    "js": [ "src/jquery-2.1.1.min.js", "src/highlight-selected.js" ],
-    "css": [ "src/style.css" ],
+    "js": [ "src/highlight-selected.js" ],
     "matches": [ "https://github.com/*" ]
   } ],
   "minimum_chrome_version": "20",
